# dart-api-client

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
scripts/: generate_client.py
src/dart_api_client/: __init__.py
src/dart_client/: __init__.py  client.py  errors.py
src/dart_client/models/: company.py  corp_code.py  disclosure.py
tests/: capture_fixtures.py  debug_corpcode.py  test_client_manual.py  test_integration_real.py  test_with_fixtures.py  verify_generated.py
tests/fixtures/: company.json  corp_code.json  disclosure_list.json  financials.json  ownership.json
