[project]
name = "dart-api-client"
version = "1.0.6"
description = "Async Python client for DART (Data Analysis, Retrieval and Transfer System) API"
readme = "README.md"
license = "MIT"
authors = [
    { name = "StatPan", email = "statpan@naver.com" }
]
requires-python = ">=3.12"
keywords = ["dart", "fss", "korea", "finance", "api", "async", "disclosure"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "tenacity>=8.2.0",
    "xmltodict>=0.13.0",
    "aiolimiter>=1.1.0",
]

[project.urls]
Homepage = "https://github.com/StatPan/dart-api-client"
Repository = "https://github.com/StatPan/dart-api-client"
Documentation = "https://github.com/StatPan/dart-api-client#readme"
"Bug Tracker" = "https://github.com/StatPan/dart-api-client/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dart_client"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "types-xmltodict>=0.13.0",
    "build>=1.3.0",
    "twine>=6.2.0",
    "python-dotenv>=1.1.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
[tool.semantic_release]
version_variables = [
    "src/dart_client/__init__.py:__version__",
    "pyproject.toml:version"
]
commit_parser = "angular"
build_command = "pip install build && python -m build"

[tool.semantic_release.branches.master]
match = "(master|main)"

[tool.semantic_release.changelog]
exclude_commit_patterns = []
mode = "update"

[tool.semantic_release.publish]
upload_to_vcs_release = true


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
